fixed disclaimer svg wave gap on mobile

--- a/src/styles/Dash-board.css
+++ b/src/styles/Dash-board.css
@@ -3,6 +3,10 @@
     src: url('../assets/Montserrat-VariableFont_wght.ttf') format('truetype');
 }
 
+.disclaimerwave{
+    margin-bottom: -5px;
+}
+
 .Welcome{
     margin-top: 80px;
     margin-left: 5%;
